[package]
name = "ampere-fs"
version = "0.1.0-rc0"
authors = [ "Hyun Ho Bae" ]
edition = "2021"
description = "FileSystem for Ampere OS"
documentation = "https://docs.rs/ampere-fs"
readme = "./README.md"
repository = "https://github.com/TheRustUser/ampere-fs"
license-file = "./LICENSE.md"
keywords = [ "osdev" ]
categories = [ "Operating System" ]

[dependencies]
